# EllieNativeBridge

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
example/c/: Cargo.toml  EllieNativeBridge.h  example_library.c  main.c
example/c/src/: main.rs
examples/c/add/: Makefile  lib.c
examples/rust/add/: Cargo.toml  README.md
examples/rust/add/src/: lib.rs
src/: c.rs  error.rs  items.rs  lib.rs  rust.rs  types.rs
tests/: mod.rs
tests/c/: ellie_native_bridge.h  lib.c
tests/rust/: Cargo.toml
tests/rust/src/: lib.rs
