[package]
name = "ellie_native_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-as-inner = { version = "0.6.1", optional = true }
libc = { version = "0.2.169", optional = true }

[features]
default = ["rust_bridge"]
rust_bridge = ["enum-as-inner"]
c_bridge = ["libc", "cbindgen"]

[lib]
crate-type = ["rlib", "dylib", "staticlib"]

[build-dependencies]
cbindgen = { version = "0.27.0", optional = true }